# testynaprawojazdypy

./: .gitignore  config.py  docker-compose.yaml  example.secrets.toml  logs.py  main.py  pyproject.toml  settings.toml
api/: convert_text_deprecated.py  convert_texts.py  eleven_labs.py  services.py  testClass.py  tts_converter.py
api/drivers_services/: driver_licence.py
api/eleven_labs/: read.me  response_models.py  tts_converter.py  voice_synth.py
api/utils/: convert_texts.py
bot/: callbacks.py  main.py
bot/db_operations/: __init__.py  pagination.py
bot/routers/: __init__.py  slides.py  start.py
database/: models.py
migrations/: env.py
migrations/versions/: 050c59d7a70d_.py  3de2a048482e_.py  4034bb023e76_.py  83b57d70b0a2_.py  958068719e35_.py
models/: request.py
